# signal_generator

./: .gitignore  CMakeLists.txt  README.md  package.json
include/hyro/: DigitalConverterComponent.h  SignalGeneratorComponent.h
include/hyro/msgs/: SignalMsgs.h  SignalMsgs.proto.h
msgs/hyro/msgs/: SignalMsgs.proto
src/components/: DigitalConverterComponent.cpp  SignalGeneratorComponent.cpp
src/examples/: signal_generator.cpp
src/internal/: SignalGenerator.cpp  SignalGenerator.h  Thresholding.cpp  Thresholding.h
tests/: test_signal_generator.cpp
